basic html layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Portfolio</title>
+</head>
+
+<body>
+    <header>
+        <h1>Ingersoll</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#works">Works</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                </ul>    
+            </nav>
+    </header>
+    <section>
+        <div id="about me">
+            <h2>About Me</h2>
+            <p>Jared Ingersoll is a student, and aspiring web designer</p>
+        </div>
+        <div id="works">
+            <h2>Works</h2>
+        </div>
+        <div id="contact-me">
+            <h2>Contact Me</h2>
+
+        </div>
+    </section>
+    <footer>
+        <h2>This is the Bottom of the Page!</h2>
+    </footer>
+</body>
+
+</html>
