image folder, image/link in html, added css

--- a/index.html
+++ b/index.html
@@ -26,20 +26,30 @@
             </nav>
     </header>
     <section>
-        <div id="about me">
+        <div class="categories" id="about-me">
             <h2>About Me</h2>
             <p>Jared Ingersoll is a student, and aspiring web designer</p>
         </div>
-        <div id="works">
+        <div class="categories" id="works">
             <h2>Works</h2>
+            <div class="project-links">
+                <figure id="refactor">
+                    <a href=" https://jareding87.github.io/horiseon-html-css-refactor/">
+                        <img src="./assets/css/images/site-screenshot.png" alt="HTML/CSS Refactor">
+                    </a>
+                    <figcaption>HTML/CSS Refactor</figcaption>
+                </figure>
+            </div>
         </div>
-        <div id="contact-me">
+        <div class="categories" id="contact-me">
             <h2>Contact Me</h2>
-
+            <p>E-mail<br>Jaredingersoll14@gmail.com</p>
+            
         </div>
     </section>
     <footer>
         <h2>This is the Bottom of the Page!</h2>
+        <p>I made this in 2022.</p>
     </footer>
 </body>
 
