add placeholder img, add contact icon, add css

--- a/index.html
+++ b/index.html
@@ -36,23 +36,29 @@
             <h2>Works</h2>
             <div class="project-links">
                 <figure id="refactor">
-                    <a href=" https://jareding87.github.io/horiseon-html-css-refactor/">
+                    <a href=" https://jareding87.github.io/horiseon-html-css-refactor/" target="_blank">
                         <img src="./assets/css/images/site-screenshot.png" alt="HTML/CSS Refactor">
                     </a>
                     <figcaption>HTML/CSS Refactor</figcaption>
+                </figure>
+                <figure id="next-project">
+                        <img src="./assets/css/images/placeholder-image.png" alt="Next Project">
+                    <figcaption>Next Project</figcaption>
                 </figure>
             </div>
         </div>
 
         <div class="categories" id="contact-me">
             <h2>Contact Me</h2>
-            <p>E-mail<br>Jaredingersoll14@gmail.com</p>
-            
+            <figure>
+                <img src="./assets/css/images/email.png" alt="E-mail">
+                <figcaption>jaredingersoll14@gmail.com</figcaption>
+            </figure>
         </div>
     </section>
 
     <footer>
-        <h2>This is the Bottom of the Page!</h2>
+        <h3>This is the Bottom of the Page!</h3>
         <p>I made this in 2022.</p>
     </footer>
 </body>
