created aside for contacts, added to css

--- a/index.html
+++ b/index.html
@@ -47,15 +47,19 @@
                 </figure>
             </div>
         </div>
-
-        <div class="categories" id="contact-me">
-            <h2>Contact Me</h2>
-            <figure>
-                <img src="./assets/css/images/email.png" alt="E-mail">
-                <figcaption>jaredingersoll14@gmail.com</figcaption>
-            </figure>
-        </div>
     </section>
+
+    <aside class="categories" id="contact-me">
+        <h2>Contact Me</h2>
+        <figure>
+            <img src="./assets/css/images/email.png" alt="E-mail">
+            <figcaption>jaredingersoll14@gmail.com</figcaption>
+        </figure>
+        <figure>
+            <img src="./assets/css/images/Instagram_icon.png.webp" alt="Instagram&copy">
+            <figcaption>Instagram&copy</figcaption>
+        </figure>
+    </aside>
 
     <footer>
         <h3>This is the Bottom of the Page!</h3>
