added css to give header gradient effect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Portfolio</title>
 </head>
 
+<!--main body of document-->
 <body>
+<!--header including title headline and unordered list for page nav links-->
     <header>
         <h1>Ingersoll</h1>
         <nav>
@@ -25,13 +27,14 @@
             </ul>    
         </nav>
     </header>
-
+<!--main section of webpage including two seperate categories for 'about me' and 'works'-->
     <section>
+<!--'about me' category-->
         <div class="categories" id="about-me">
             <h2>About Me</h2>
-            <p>Jared Ingersoll is a student, and aspiring web designer</p>
+            <p>Jared Ingersoll is a student and an aspiring web designer based in Trenton, NJ.</p>
         </div>
-
+<!--'works' catergory-->
         <div class="categories" id="works">
             <h2>Works</h2>
             <div class="project-links">
@@ -48,7 +51,7 @@
             </div>
         </div>
     </section>
-
+<!--aside including 'contact me' category-->
     <aside class="categories" id="contact-me">
         <h2>Contact Me</h2>
         <figure>
@@ -60,7 +63,7 @@
             <figcaption>Instagram&copy</figcaption>
         </figure>
     </aside>
-
+<!--footer-->
     <footer>
         <h3>This is the Bottom of the Page!</h3>
         <p>I made this in 2022.</p>
