add self image, add css, add coments

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Portfolio</title>
+    <title>Jareds Portfolio</title>
 </head>
 
 <!--main body of document-->
@@ -29,21 +29,28 @@
     </header>
 <!--main section of webpage including two seperate categories for 'about me' and 'works'-->
     <section>
-<!--'about me' category-->
+<!--'about me' category including photo of self-->
         <div class="categories" id="about-me">
             <h2>About Me</h2>
+            <img src="./assets/css/images/placeholder-image.png" alt="Self">
             <p>Jared Ingersoll is a student and an aspiring web designer based in Trenton, NJ.</p>
         </div>
-<!--'works' catergory-->
+<!--'works' catergory including image links to previous projects-->
         <div class="categories" id="works">
             <h2>Works</h2>
-            <div class="project-links">
+            <div id="first-project">
                 <figure id="refactor">
                     <a href=" https://jareding87.github.io/horiseon-html-css-refactor/" target="_blank">
                         <img src="./assets/css/images/site-screenshot.png" alt="HTML/CSS Refactor">
                     </a>
                     <figcaption>HTML/CSS Refactor</figcaption>
                 </figure>
+            </div>
+            <div class="project-links">
+                <figure id="prework-study-guide">
+                    <img src="./assets/css/images/prework-study-guide.png" alt="Prework Study Guide">
+                <figcaption>Prework Study Guide</figcaption>
+            </figure>
                 <figure id="next-project">
                         <img src="./assets/css/images/placeholder-image.png" alt="Next Project">
                     <figcaption>Next Project</figcaption>
