upload self photo, add css

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             </ul>    
         </nav>
     </header>
+    <div class="content-container">
 <!--main section of webpage including two seperate categories for 'about me' and 'works'-->
     <section>
 <!--'about me' category including photo of self-->
         <div class="categories" id="about-me">
             <h2>About Me</h2>
-            <img src="./assets/css/images/placeholder-image.png" alt="Self">
+            <img src="./assets/css/images/self.jpg" alt="Self">
             <p>Jared Ingersoll is a student and an aspiring web designer based in Trenton, NJ.</p>
         </div>
 <!--'works' catergory including image links to previous projects-->
@@ -70,6 +71,7 @@
             <figcaption>Instagram&copy</figcaption>
         </figure>
     </aside>
+</div>
 <!--footer-->
     <footer>
         <h3>This is the Bottom of the Page!</h3>
