--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
             </div>
             <div class="project-links">
                 <figure id="prework-study-guide">
+                    <a href="https://jareding87.github.io/prework-study-guide/" target="_blank">
                     <img src="./assets/css/images/prework-study-guide.png" alt="Prework Study Guide">
+                    </a>
                 <figcaption>Prework Study Guide</figcaption>
             </figure>
-                <figure id="next-project">
-                        <img src="./assets/css/images/placeholder-image.png" alt="Next Project">
-                    <figcaption>Next Project</figcaption>
-                </figure>
+            <figure id="next-project">
+                <a href="https://sminker0401.github.io/Its-Raining-Tacos/" target="_blank">
+                    <img src="./assets/css/images/its-raining-tacos.png" alt="Its Raining Tacos">
+                    </a>
+                <figcaption>It's Raining Tacos</figcaption>
+            </figure>
             </div>
         </div>
     </section>
